--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
